--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Shubham Chandel
 description: The Umnent Universe
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/sksq96/sksq96.github.io/blob/master/images/profile-logo.png
 
 #
 # Flags below are optional
@@ -18,7 +18,7 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: 
   facebook:
   flickr:
   github: sksq96
