--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Shubham Chandel
 description: The Umnent Universe
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/sksq96/sksq96.github.io/blob/master/images/profile-logo.png
+avatar: https://raw.githubusercontent.com/sksq96/sksq96.github.io/master/images/profile-logo.png
 
 #
 # Flags below are optional
