--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: https://raw.githubusercontent.com/sksq96/sksq96.github.io/master/images/
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: 
+  email: shubhamchandel@nyu.edu
   facebook:
   flickr:
   github: sksq96
   instagram:
-  linkedin:
+  linkedin: chandelshubham
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: sksq96
