--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Shubham Chandel
 description: The Umnent Universe
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/sksq96/sksq96.github.io/master/images/profile-logo.png
+avatar: https://raw.githubusercontent.com/sksq96/sksq96.github.io/master/resources/logo.png
 
 #
 # Flags below are optional
@@ -37,7 +37,7 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: UA-127020666-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
