--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Shubham Chandel
+name: Aastha Kalra
 
 # Short bio or description (displayed in the header)
-description: The Umnent Universe
+description: Graphic Designer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/sksq96/sksq96.github.io/master/resources/logo.png
