--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Aastha Kalra
 description: Graphic Designer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/sksq96/sksq96.github.io/master/resources/logo.png
+avatar: https://raw.githubusercontent.com/aasthakalra/aasthakalra.github.io/master/resources/logo.png
 
 #
 # Flags below are optional
